Re-adding music

--- a/Version_A/index.html
+++ b/Version_A/index.html
@@ -8,10 +8,9 @@
 	</head>
 	<body>
 		<div id="container">
-			<!-- <audio controls id="holiday_music">
+			<audio id="holiday_music">
 	  		<source src="assets/holiday_music.mp3" type="audio/mpeg">
-				Your browser does not support the audio element.
-			</audio> -->
+			</audio>
 
 			<img src="assets/kemin-01.png" class="first_set holiday_image" id="kemin-01.png">
 			<img src="assets/kemin-02.png" class="first_set holiday_image" id="kemin-02.png">
