Messing around with columns

--- a/Version_C/index.html
+++ b/Version_C/index.html
@@ -18,37 +18,37 @@
 	<body>
 		<div id="container" class="pure-g">
 
-			<!-- <audio id="holiday_music">
+			<audio id="holiday_music">
 	  		<source src="assets/holiday_music.mp3" type="audio/mpeg">
-			</audio> -->
+			</audio>
 			<!-- TODO: find alternative to HTML5 implementation for audio -->
 			<!-- TODO: get it working on mobile -->
 			<!-- TODO: get it working on IE -->
 
-			<div class="pure-u-lg-1-6 pure-u-md-1-4 pure-u-sm-1-4 holiday_image"><img src="assets/kemin-01.png" class="pure-img" id="kemin-01"></div>
-			<div class="pure-u-lg-1-6 pure-u-md-1-4 pure-u-sm-1-4 holiday_image"><img src="assets/kemin-02.png" class="pure-img" id="kemin-02"></div>
-			<div class="pure-u-lg-1-6 pure-u-md-1-4 pure-u-sm-1-4 holiday_image"><img src="assets/kemin-03.png" class="pure-img" id="kemin-03"></div>
-			<div class="pure-u-lg-1-6 pure-u-md-1-4 pure-u-sm-1-4 holiday_image"><img src="assets/kemin-04.png" class="pure-img" id="kemin-04"></div>
-			<div class="pure-u-lg-1-6 pure-u-md-1-4 pure-u-sm-1-4 holiday_image"><img src="assets/kemin-05.png" class="pure-img" id="kemin-05"></div>
-			<div class="pure-u-lg-1-6 pure-u-md-1-4 pure-u-sm-1-4 holiday_image"><img src="assets/kemin-06.png" class="pure-img" id="kemin-06"></div>
-			<div class="pure-u-lg-1-6 pure-u-md-1-4 pure-u-sm-1-4 holiday_image"><img src="assets/kemin-07.png" class="pure-img" id="kemin-07"></div>
-			<div class="pure-u-lg-1-6 pure-u-md-1-4 pure-u-sm-1-4 holiday_image"><img src="assets/kemin-08.png" class="pure-img" id="kemin-08"></div>
-			<div class="pure-u-lg-1-6 pure-u-md-1-4 pure-u-sm-1-4 holiday_image"><img src="assets/kemin-09.png" class="pure-img" id="kemin-09"></div>
-			<div class="pure-u-lg-1-6 pure-u-md-1-4 pure-u-sm-1-4 holiday_image"><img src="assets/kemin-10.png" class="pure-img" id="kemin-10"></div>
-			<div class="pure-u-lg-1-6 pure-u-md-1-4 pure-u-sm-1-4 holiday_image"><img src="assets/kemin-11.png" class="pure-img" id="kemin-11"></div>
-			<div class="pure-u-lg-1-6 pure-u-md-1-4 pure-u-sm-1-4 holiday_image"><img src="assets/kemin-12.png" class="pure-img" id="kemin-12"></div>
-			<div class="pure-u-lg-1-6 pure-u-md-1-4 pure-u-sm-1-4 holiday_image"><img src="assets/kemin-13.png" class="pure-img" id="kemin-13"></div>
-			<div class="pure-u-lg-1-6 pure-u-md-1-4 pure-u-sm-1-4 holiday_image"><img src="assets/kemin-14.png" class="pure-img" id="kemin-14"></div>
-			<div class="pure-u-lg-1-6 pure-u-md-1-4 pure-u-sm-1-4 holiday_image"><img src="assets/kemin-15.png" class="pure-img" id="kemin-15"></div>
-			<div class="pure-u-lg-1-6 pure-u-md-1-4 pure-u-sm-1-4 holiday_image"><img src="assets/kemin-16.png" class="pure-img" id="kemin-16"></div>
-			<div class="pure-u-lg-1-6 pure-u-md-1-4 pure-u-sm-1-4 holiday_image"><img src="assets/kemin-17.png" class="pure-img" id="kemin-17"></div>
-			<div class="pure-u-lg-1-6 pure-u-md-1-4 pure-u-sm-1-4 holiday_image"><img src="assets/kemin-18.png" class="pure-img" id="kemin-18"></div>
-			<div class="pure-u-lg-1-6 pure-u-md-1-4 pure-u-sm-1-4 holiday_image"><img src="assets/kemin-19.png" class="pure-img" id="kemin-19"></div>
-			<div class="pure-u-lg-1-6 pure-u-md-1-4 pure-u-sm-1-4 holiday_image"><img src="assets/kemin-20.png" class="pure-img" id="kemin-20"></div>
-			<div class="pure-u-lg-1-6 pure-u-md-1-4 pure-u-sm-1-4 holiday_image"><img src="assets/kemin-21.png" class="pure-img" id="kemin-21"></div>
-			<div class="pure-u-lg-1-6 pure-u-md-1-4 pure-u-sm-1-4 holiday_image"><img src="assets/kemin-22.png" class="pure-img" id="kemin-22"></div>
-			<div class="pure-u-lg-1-6 pure-u-md-1-4 pure-u-sm-1-4 holiday_image"><img src="assets/kemin-23.png" class="pure-img" id="kemin-23"></div>
-			<div class="pure-u-lg-1-6 pure-u-md-1-4 pure-u-sm-1-4 holiday_image"><img src="assets/Kemin_logo.png" class="pure-img" id="small_logo"></div>
+			<div class="pure-u-1-6 pure-u-lg-1-6 pure-u-md-1-6 pure-u-sm-1-4 holiday_image"><img src="assets/kemin-01.png" class="pure-img" id="kemin-01"></div>
+			<div class="pure-u-1-6 pure-u-lg-1-6 pure-u-md-1-6 pure-u-sm-1-4 holiday_image"><img src="assets/kemin-02.png" class="pure-img" id="kemin-02"></div>
+			<div class="pure-u-1-6 pure-u-lg-1-6 pure-u-md-1-6 pure-u-sm-1-4 holiday_image"><img src="assets/kemin-03.png" class="pure-img" id="kemin-03"></div>
+			<div class="pure-u-1-6 pure-u-lg-1-6 pure-u-md-1-6 pure-u-sm-1-4 holiday_image"><img src="assets/kemin-04.png" class="pure-img" id="kemin-04"></div>
+			<div class="pure-u-1-6 pure-u-lg-1-6 pure-u-md-1-6 pure-u-sm-1-4 holiday_image"><img src="assets/kemin-05.png" class="pure-img" id="kemin-05"></div>
+			<div class="pure-u-1-6 pure-u-lg-1-6 pure-u-md-1-6 pure-u-sm-1-4 holiday_image"><img src="assets/kemin-06.png" class="pure-img" id="kemin-06"></div>
+			<div class="pure-u-1-6 pure-u-lg-1-6 pure-u-md-1-6 pure-u-sm-1-4 holiday_image"><img src="assets/kemin-07.png" class="pure-img" id="kemin-07"></div>
+			<div class="pure-u-1-6 pure-u-lg-1-6 pure-u-md-1-6 pure-u-sm-1-4 holiday_image"><img src="assets/kemin-08.png" class="pure-img" id="kemin-08"></div>
+			<div class="pure-u-1-6 pure-u-lg-1-6 pure-u-md-1-6 pure-u-sm-1-4 holiday_image"><img src="assets/kemin-09.png" class="pure-img" id="kemin-09"></div>
+			<div class="pure-u-1-6 pure-u-lg-1-6 pure-u-md-1-6 pure-u-sm-1-4 holiday_image"><img src="assets/kemin-10.png" class="pure-img" id="kemin-10"></div>
+			<div class="pure-u-1-6 pure-u-lg-1-6 pure-u-md-1-6 pure-u-sm-1-4 holiday_image"><img src="assets/kemin-11.png" class="pure-img" id="kemin-11"></div>
+			<div class="pure-u-1-6 pure-u-lg-1-6 pure-u-md-1-6 pure-u-sm-1-4 holiday_image"><img src="assets/kemin-12.png" class="pure-img" id="kemin-12"></div>
+			<div class="pure-u-1-6 pure-u-lg-1-6 pure-u-md-1-6 pure-u-sm-1-4 holiday_image"><img src="assets/kemin-13.png" class="pure-img" id="kemin-13"></div>
+			<div class="pure-u-1-6 pure-u-lg-1-6 pure-u-md-1-6 pure-u-sm-1-4 holiday_image"><img src="assets/kemin-14.png" class="pure-img" id="kemin-14"></div>
+			<div class="pure-u-1-6 pure-u-lg-1-6 pure-u-md-1-6 pure-u-sm-1-4 holiday_image"><img src="assets/kemin-15.png" class="pure-img" id="kemin-15"></div>
+			<div class="pure-u-1-6 pure-u-lg-1-6 pure-u-md-1-6 pure-u-sm-1-4 holiday_image"><img src="assets/kemin-16.png" class="pure-img" id="kemin-16"></div>
+			<div class="pure-u-1-6 pure-u-lg-1-6 pure-u-md-1-6 pure-u-sm-1-4 holiday_image"><img src="assets/kemin-17.png" class="pure-img" id="kemin-17"></div>
+			<div class="pure-u-1-6 pure-u-lg-1-6 pure-u-md-1-6 pure-u-sm-1-4 holiday_image"><img src="assets/kemin-18.png" class="pure-img" id="kemin-18"></div>
+			<div class="pure-u-1-6 pure-u-lg-1-6 pure-u-md-1-6 pure-u-sm-1-4 holiday_image"><img src="assets/kemin-19.png" class="pure-img" id="kemin-19"></div>
+			<div class="pure-u-1-6 pure-u-lg-1-6 pure-u-md-1-6 pure-u-sm-1-4 holiday_image"><img src="assets/kemin-20.png" class="pure-img" id="kemin-20"></div>
+			<div class="pure-u-1-6 pure-u-lg-1-6 pure-u-md-1-6 pure-u-sm-1-4 holiday_image"><img src="assets/kemin-21.png" class="pure-img" id="kemin-21"></div>
+			<div class="pure-u-1-6 pure-u-lg-1-6 pure-u-md-1-6 pure-u-sm-1-4 holiday_image"><img src="assets/kemin-22.png" class="pure-img" id="kemin-22"></div>
+			<div class="pure-u-1-6 pure-u-lg-1-6 pure-u-md-1-6 pure-u-sm-1-4 holiday_image"><img src="assets/kemin-23.png" class="pure-img" id="kemin-23"></div>
+			<div class="pure-u-1-6 pure-u-lg-1-6 pure-u-md-1-6 pure-u-sm-1-4 holiday_image"><img src="assets/Kemin_logo.png" class="pure-img" id="small_logo"></div>
 			<div class="pure-u-1-1 logo"><img src="assets/Kemin_logo.png" id="kemin_logo" class="pure-img"></div>
 			<div class="holiday_message">Happy Holidays from the Kemin Family!</div>
 		</div>
