Swapping Pure for Bootstrap

--- a/Version_D/index.html
+++ b/Version_D/index.html
@@ -1,44 +1,52 @@
 <html>
 	<head>
 
-	<meta charset="UTF-8">
-	<title>Kemin Holiday Card</title>
+		<meta charset="UTF-8">
+		<title>Kemin Holiday Card</title>
 
-	<script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<link rel=stylesheet type="text/css" href="index.css">
-	<script src="index.js"></script>
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+		<script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+
+		<!-- Using Bootstrap for the grid -->
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+
+		<link rel=stylesheet type="text/css" href="index.css">
+		<script src="index.js"></script>
+
 	</head>
 
 	<body>
-		<div>
-			<div class="holiday_image"><!-- <img src="assets/kemin-01.png" id="kemin-01">--></div>
-			<div class="holiday_image"><!-- <img src="assets/kemin-02.png" id="kemin-02">--></div>
-			<div class="holiday_image"><!-- <img src="assets/kemin-03.png" id="kemin-03">--></div>
-			<div class="holiday_image"><!-- <img src="assets/kemin-04.png" id="kemin-04">--></div>
-			<div class="holiday_image"><!-- <img src="assets/kemin-05.png" id="kemin-05">--></div>
-			<div class="holiday_image"><!-- <img src="assets/kemin-06.png" id="kemin-06">--></div>
-			<div class="holiday_image"><!-- <img src="assets/kemin-07.png" id="kemin-07">--></div>
-			<div class="holiday_image"><!-- <img src="assets/kemin-08.png" id="kemin-08">--></div>
-			<div class="holiday_image"><!-- <img src="assets/kemin-09.png" id="kemin-09">--></div>
-			<div class="holiday_image"><!-- <img src="assets/kemin-10.png" id="kemin-10">--></div>
-			<div class="holiday_image"><!-- <img src="assets/kemin-11.png" id="kemin-11">--></div>
-			<div class="holiday_image"><!-- <img src="assets/kemin-12.png" id="kemin-12">--></div>
-			<div class="holiday_image"><!-- <img src="assets/kemin-13.png" id="kemin-13">--></div>
-			<div class="holiday_image"><!-- <img src="assets/kemin-14.png" id="kemin-14">--></div>
-			<div class="holiday_image"><!-- <img src="assets/kemin-15.png" id="kemin-15">--></div>
-			<div class="holiday_image"><!-- <img src="assets/kemin-16.png" id="kemin-16">--></div>
-			<div class="holiday_image"><!-- <img src="assets/kemin-17.png" id="kemin-17">--></div>
-			<div class="holiday_image"><!-- <img src="assets/kemin-18.png" id="kemin-18">--></div>
-			<div class="holiday_image"><!-- <img src="assets/kemin-19.png" id="kemin-19">--></div>
-			<div class="holiday_image"><!-- <img src="assets/kemin-20.png" id="kemin-20">--></div>
-			<div class="holiday_image"><!-- <img src="assets/kemin-21.png" id="kemin-21">--></div>
-			<div class="holiday_image"><!-- <img src="assets/kemin-22.png" id="kemin-22">--></div>
-			<div class="holiday_image"><!-- <img src="assets/kemin-23.png" id="kemin-23">--></div>
-			<div class="holiday_image"><!-- <img src="assets/Kemin_logo.png" id="small_logo">--></div>
-			
 
+		<div class="container-fluid">
+
+			<div class="col-lg-2 col-md-2 col-sm-2 col-xs-4 holiday_image"><img class="" src="assets/kemin-01.png" id="kemin-01"></div>
+			<div class="col-lg-2 col-md-2 col-sm-2 col-xs-4 holiday_image"><img class="" src="assets/kemin-02.png" id="kemin-02"></div>
+			<div class="col-lg-2 col-md-2 col-sm-2 col-xs-4 holiday_image"><img class="" src="assets/kemin-03.png" id="kemin-03"></div>
+			<div class="col-lg-2 col-md-2 col-sm-2 col-xs-4 holiday_image"><img class="" src="assets/kemin-04.png" id="kemin-04"></div>
+			<div class="col-lg-2 col-md-2 col-sm-2 col-xs-4 holiday_image"><img class="" src="assets/kemin-05.png" id="kemin-05"></div>
+			<div class="col-lg-2 col-md-2 col-sm-2 col-xs-4 holiday_image"><img class="" src="assets/kemin-06.png" id="kemin-06"></div>
+			<div class="col-lg-2 col-md-2 col-sm-2 col-xs-4 holiday_image"><img class="" src="assets/kemin-07.png" id="kemin-07"></div>
+			<div class="col-lg-2 col-md-2 col-sm-2 col-xs-4 holiday_image"><img class="" src="assets/kemin-08.png" id="kemin-08"></div>
+			<div class="col-lg-2 col-md-2 col-sm-2 col-xs-4 holiday_image"><img class="" src="assets/kemin-09.png" id="kemin-09"></div>
+			<div class="col-lg-2 col-md-2 col-sm-2 col-xs-4 holiday_image"><img class="" src="assets/kemin-10.png" id="kemin-10"></div>
+			<div class="col-lg-2 col-md-2 col-sm-2 col-xs-4 holiday_image"><img class="" src="assets/kemin-11.png" id="kemin-11"></div>
+			<div class="col-lg-2 col-md-2 col-sm-2 col-xs-4 holiday_image"><img class="" src="assets/kemin-12.png" id="kemin-12"></div>
+			<div class="col-lg-2 col-md-2 col-sm-2 col-xs-4 holiday_image"><img class="" src="assets/kemin-13.png" id="kemin-13"></div>
+			<div class="col-lg-2 col-md-2 col-sm-2 col-xs-4 holiday_image"><img class="" src="assets/kemin-14.png" id="kemin-14"></div>
+			<div class="col-lg-2 col-md-2 col-sm-2 col-xs-4 holiday_image"><img class="" src="assets/kemin-15.png" id="kemin-15"></div>
+			<div class="col-lg-2 col-md-2 col-sm-2 col-xs-4 holiday_image"><img class="" src="assets/kemin-16.png" id="kemin-16"></div>
+			<div class="col-lg-2 col-md-2 col-sm-2 col-xs-4 holiday_image"><img class="" src="assets/kemin-17.png" id="kemin-17"></div>
+			<div class="col-lg-2 col-md-2 col-sm-2 col-xs-4 holiday_image"><img class="" src="assets/kemin-18.png" id="kemin-18"></div>
+			<div class="col-lg-2 col-md-2 col-sm-2 col-xs-4 holiday_image"><img class="" src="assets/kemin-19.png" id="kemin-19"></div>
+			<div class="col-lg-2 col-md-2 col-sm-2 col-xs-4 holiday_image"><img class="" src="assets/kemin-20.png" id="kemin-20"></div>
+			<div class="col-lg-2 col-md-2 col-sm-2 col-xs-4 holiday_image"><img class="" src="assets/kemin-21.png" id="kemin-21"></div>
+			<div class="col-lg-2 col-md-2 col-sm-2 col-xs-4 holiday_image"><img class="" src="assets/kemin-22.png" id="kemin-22"></div>
+			<div class="col-lg-2 col-md-2 col-sm-2 col-xs-4 holiday_image"><img class="" src="assets/kemin-23.png" id="kemin-23"></div>
+			<div class="col-lg-2 col-md-2 col-sm-2 col-xs-4 holiday_image"><img class="" src="assets/Kemin_logo.png" id="small_logo"></div>
+			
 			<div class="holiday_message">Happy Holidays from the Kemin Family!</div>
 
 			<div class="logo"><img src="assets/Kemin_logo.png" id="big_logo"></div>
