Fixing small bugs, adding music

--- a/Version_D/index.html
+++ b/Version_D/index.html
@@ -22,6 +22,10 @@
 
 		<div class="container-fluid">
 
+			<audio id="holiday_music">
+	  		<source src="assets/holiday_music.mp3" type="audio/mpeg">
+			</audio>
+
 			<div class="col-lg-2 col-md-2 col-sm-3 col-xs-4 block"><img class="holiday_image" src="assets/kemin-01.png" id="kemin-01"></div>
 			<div class="col-lg-2 col-md-2 col-sm-3 col-xs-4 block"><img class="holiday_image" src="assets/kemin-02.png" id="kemin-02"></div>
 			<div class="col-lg-2 col-md-2 col-sm-3 col-xs-4 block"><img class="holiday_image" src="assets/kemin-03.png" id="kemin-03"></div>
