--- a/Version_D/index.html
+++ b/Version_D/index.html
@@ -5,6 +5,7 @@
 		<title>Kemin Holiday Card</title>
 
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	  <meta http-equiv="Cache-control" content="public">
 	  <meta name="viewport" content="width=device-width, initial-scale=1">
 
 		<script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
