Changed from hide/show to opacity-based reveal to smooth out animation

--- a/Version_D/index.html
+++ b/Version_D/index.html
@@ -22,7 +22,7 @@
 
 		<div class="container-fluid">
 
-			<audio id="holiday_music">
+			<audio id="holiday_music" preload="auto">
 	  		<source src="assets/holiday_music.mp3" type="audio/mpeg">
 			</audio>
 
