--- a/Version_E/index.html
+++ b/Version_E/index.html
@@ -13,6 +13,9 @@
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
 
+		<script src="lowLag.js"></script>
+		<script src="/sm2/js/soundmanager2.js"></script>
+
 		<link rel=stylesheet type="text/css" href="index.css">
 		<script src="index.js"></script>
 
@@ -21,10 +24,6 @@
 	<body>
 
 		<div class="container-fluid">
-
-			<audio id="holiday_music" preload="auto">
-	  		<source src="assets/holiday_music.mp3" type="audio/mpeg">
-			</audio>
 
 			<div class="col-lg-2 col-md-2 col-sm-3 col-xs-4 block"><img class="holiday_image" src="assets/kemin-01.png" id="kemin-01"></div>
 			<div class="col-lg-2 col-md-2 col-sm-3 col-xs-4 block"><img class="holiday_image" src="assets/kemin-02.png" id="kemin-02"></div>
