Finally found an audio library that did what I wanted it to do.

--- a/Version_E/index.html
+++ b/Version_E/index.html
@@ -13,8 +13,7 @@
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
 
-		<script src="lowLag.js"></script>
-		<script src="/sm2/js/soundmanager2.js"></script>
+		<script src="//cdnjs.cloudflare.com/ajax/libs/howler/1.1.17/howler.min.js"></script>
 
 		<link rel=stylesheet type="text/css" href="index.css">
 		<script src="index.js"></script>
